--- a/src/app/pages/_data/passageway/passageway.component.html
+++ b/src/app/pages/_data/passageway/passageway.component.html
@@ -1,6 +1,6 @@
 <div class="row">
 
-  <div class="col-12 col-xl-8">
+  <div class="col-12 col-xl-8 pb-3">
     <fis-vs-sefaz>
     </fis-vs-sefaz>
   </div>
@@ -12,9 +12,7 @@
 
 </div>
 
-<div class="row">
-  <hr/>
-</div>
+<hr/>
 
 <div class="row">
 
