--- a/src/app/pages/_data/passageway/passageway.component.scss
+++ b/src/app/pages/_data/passageway/passageway.component.scss
@@ -4,14 +4,9 @@
   custom-bar-chart,
   custom-pie-chart,
   bar-echart,
-  fis-vs-sefaz,
+  //fis-vs-sefaz,
 
-  ngx-chartjs-pie,
-  ngx-chartjs-bar,
-  ngx-chartjs-line,
-  ngx-chartjs-multiple-xaxis,
-  ngx-chartjs-bar-horizontal,
-  ngx-chartjs-radar {
+  custom-bar-chart{
     display: block;
     height: nb-theme(card-height-medium);
     width: 100%;
