--- a/src/app/pages/_data/rules/rules.component.html
+++ b/src/app/pages/_data/rules/rules.component.html
@@ -12,45 +12,46 @@
     </div>
 
     <div class="col">
-   
-    <table class="table table-hover table-striped table-bordered">
-      <thead class="thead-light">
-        
-        <tr>
-          <th class="col-1">#</th>
-          <th class="col-5">Nome</th>
-          <th class="col-1">Tipo</th>
-          <th class="col-2 text-center" colspan="2">Data</th>
-          <th class="col-1">Ativo</th>
-          <th colspan="3" class="col-2 text-center">Ações</th>
-        </tr>
+      <div class="table-responsive">
+        <table class="table table-hover table-striped table-bordered">
+          <thead class="thead-light">
+            
+            <tr>
+              <th class="col-1">#</th>
+              <th class="col-5">Nome</th>
+              <th class="col-1">Tipo</th>
+              <th class="col-2 text-center" colspan="2">Data</th>
+              <th class="col-1">Ativo</th>
+              <th colspan="3" class="col-2 text-center">Ações</th>
+            </tr>
 
-        <tr>
-          <th colspan="6"></th>
-          <th colspan="3" class="col-2 text-center">
-            <button nbButton fullWidth outline status="success"  (click)="add()"> 
-          <nb-icon icon="plus-circle-outline"></nb-icon> </button></th>
-        </tr>
+            <tr>
+              <th colspan="6"></th>
+              <th colspan="3" class="col-2 text-center">
+                <button nbButton fullWidth outline status="success"  (click)="add()"> 
+              <nb-icon icon="plus-circle-outline"></nb-icon> </button></th>
+            </tr>
 
-      </thead>
+          </thead>
 
-      <tbody>
-        <tr *ngFor="let item of data" >
-          <td class="align-middle">{{item?.id}}</td>
-          <td class="align-middle">{{item?.nome}}</td>
-          <td class="align-middle">{{item?.tipo}}</td>
-          <td class="align-middle">{{item?.data?.inicio}}</td>
-          <td class="align-middle">{{item?.data?.final}}</td>
-          <td class="align-middle">
-            <nb-checkbox [checked]="item?.status" disabled></nb-checkbox>
-          </td>
-          <td><button nbButton fullWidth outline status="warning" (click)="edit(item)"> <nb-icon icon="edit-outline"></nb-icon> </button></td>
-          <td><button nbButton fullWidth outline status="primary" (click)="duplicate(item)"> <nb-icon icon="copy-outline"></nb-icon> </button></td>
-          <td><button nbButton fullWidth outline status="danger" (click)="delete(item)"> <nb-icon icon="trash-2-outline"></nb-icon> </button></td>
-        </tr>
+          <tbody>
+            <tr *ngFor="let item of data" >
+              <td class="align-middle">{{item?.id}}</td>
+              <td class="align-middle">{{item?.nome}}</td>
+              <td class="align-middle">{{item?.tipo}}</td>
+              <td class="align-middle">{{item?.data?.inicio}}</td>
+              <td class="align-middle">{{item?.data?.final}}</td>
+              <td class="align-middle">
+                <nb-checkbox [checked]="item?.status" disabled></nb-checkbox>
+              </td>
+              <td><button nbButton fullWidth outline status="warning" (click)="edit(item)"> <nb-icon icon="edit-outline"></nb-icon> </button></td>
+              <td><button nbButton fullWidth outline status="primary" (click)="duplicate(item)"> <nb-icon icon="copy-outline"></nb-icon> </button></td>
+              <td><button nbButton fullWidth outline status="danger" (click)="delete(item)"> <nb-icon icon="trash-2-outline"></nb-icon> </button></td>
+            </tr>
 
-      </tbody>
-    </table>
+          </tbody>
+        </table>
+      </div>
      </div>
   </nb-card-body>
 </nb-card>
