--- a/src/app/@theme/components/header/header.component.html
+++ b/src/app/@theme/components/header/header.component.html
@@ -8,18 +8,22 @@
     <a class="logo" href="#" (click)="navigateHome()">Intercept</a>
   </div>
 
-  <nb-select [selected]="currentTheme" (selectedChange)="changeTheme($event)" status="primary">
-    <nb-option *ngFor="let theme of themes" [value]="theme.value"> {{ theme.name }}</nb-option>
-  </nb-select>
+  <!--
+    <nb-select [selected]="currentTheme" (selectedChange)="changeTheme($event)" status="primary">
+      <nb-option *ngFor="let theme of themes" [value]="theme.value"> {{ theme.name }}</nb-option>
+    </nb-select>
+  -->
+
 </div>
 
 <div class="header-container">
   <nb-actions size="small">
     <nb-action class="user-action" *nbIsGranted="['view', 'user']" >
       <nb-user [nbContextMenu]="userMenu"
-                nbContextMenuTag="login"
-               [onlyPicture]="userPictureOnly"
-               [name]="user?.name"
+               nbContextMenuTag="login"
+               [onlyPicture]="false"
+               [name]="user.name"
+               [showTitle]="true"
                [picture]="user?.picture">
       </nb-user>
     </nb-action>
