--- a/src/app/pages/_data/passageway/quantidade-blacklist/quantidade-blacklist.component.html
+++ b/src/app/pages/_data/passageway/quantidade-blacklist/quantidade-blacklist.component.html
@@ -1,34 +1,54 @@
-<nb-card>
-  <nb-card-header class="text-center">Quantidade registros na blacklist</nb-card-header>
 
+<nb-card >
+  <nb-card-header class="text-center">Quantidade Registros na Blacklist</nb-card-header>
+  
   <nb-card-body>
     <nb-accordion>
       <nb-accordion-item>
         <nb-accordion-item-header>
-          Filtros
+          Filtros 
         </nb-accordion-item-header>
-        <nb-accordion-item-body>
-        
-          <form [formGroup]="form" (ngSubmit)="onSubmit()" class="needs-validation" novalidate [nbSpinner]="loading">
+        <nb-accordion-item-body [nbSpinner]="!loaded">
+          
+          <form [formGroup]="form" (ngSubmit)="onSubmit()" class="needs-validation" novalidate >
+            
             <div class="full-name-inputs">
-              <input type="text" nbInput fullWidth placeholder="Inicio" [formControl]="inicio"  [status]='getStatus(inicio)' [nbDatepicker]="inicioPicker">
-              <nb-datepicker #inicioPicker>  </nb-datepicker>
-
-              <input type="text" nbInput fullWidth placeholder="Final" [formControl]="final"  [status]='getStatus(final)' [nbDatepicker]="finalPicker">
-              <nb-datepicker #finalPicker>  </nb-datepicker>
+              <input 
+                nbInput 
+                fullWidth 
+                placeholder="Inicio" 
+                [nbDatepicker]="inicioPicker"
+                [formControl]="inicio"  
+                >
+              <nb-datepicker #inicioPicker>
+              </nb-datepicker>
+            
+              <input 
+                nbInput 
+                fullWidth 
+                placeholder="final" 
+                [nbDatepicker]="finalPicker"
+                [formControl]="final"  
+                >
+              <nb-datepicker #finalPicker >
+              </nb-datepicker>
+              
               <button class="control-button" nbButton type="submit">
                 Buscar
               </button>
             </div>
-        </form>
+          </form>
           
         </nb-accordion-item-body>
       </nb-accordion-item>
-      </nb-accordion>
+    </nb-accordion>
   </nb-card-body>
-
+  
   <nb-card-body>
-    <bar-echart [data]="data"></bar-echart>
+    <ng-container *ngIf="loaded">
+      <bar-echart [data]="data">
+      </bar-echart>
+    </ng-container>
   </nb-card-body>
-
+  
 </nb-card>
