--- a/src/app/@theme/components/header/header.component.html
+++ b/src/app/@theme/components/header/header.component.html
@@ -24,7 +24,7 @@
                [onlyPicture]="false"
                [name]="user.name"
                [showTitle]="true"
-               [picture]="user?.picture">
+               [picture]="base64image">
       </nb-user>
     </nb-action>
   </nb-actions>
