--- a/src/app/pages/_filtro/filtro.component.html
+++ b/src/app/pages/_filtro/filtro.component.html
@@ -2,7 +2,11 @@
   <nb-accordion-item>
     
     <nb-accordion-item-header>
-      Filtros
+      <div>
+        Filtros 
+        <br/>
+        <div class="label">O período máximo permitido é de 90 dias.</div>
+      </div>
     </nb-accordion-item-header>
 
     <nb-accordion-item-body [nbSpinner]="!loaded">
