--- a/src/app/pages/_data/map/map.component.html
+++ b/src/app/pages/_data/map/map.component.html
@@ -1,30 +1,31 @@
 <div class="row">
-  <div class="col">
-    <div class="float-left">
+  <div class="col" >
+    <div class="float-left" *ngIf="loaded">
       <button nbButton ghost (click)="showLegenda()" style="padding: 0;" type="button">Legenda</button>
     </div>
 
     <div class="float-right">
-      <b>Antenas exibidas: </b>
-      {{coordenadas.length}}
+      <b>Antenas exibidas: {{numAtenas}} </b>
     </div>
+
   </div>
 </div>
 
 <nb-card>
-  <nb-card-body>
+  <nb-card-body *ngIf="loaded">
 
     <google-map 
       [center]="{lat: -16.6761553, lng: -49.2886361}" 
-      [zoom]="8" 
+      [zoom]="10" 
       width="100%" height="85vh" >
       
       <map-marker 
-        [position]="{lat: coordenada.latitude, lng: coordenada.longitude}"
-        [options]="{icon: 'assets/icon/radio/radio-outline-red-48-48.svg' }"
-        (mapClick)="showDialog(coordenada)"
-        *ngFor="let coordenada of coordenadas"
+        [position]="{lat: geo.element.latitude, lng: geo.element.longitude}"
+        [options]="{icon: geo.element.icon }"
+        (mapClick)="showDialog(geo.element)"
+        *ngFor="let geo of coordenadas"
       >
+
       </map-marker>
     </google-map>
     
