--- a/src/app/pages/_data/rules/delete/rules-delete.component.html
+++ b/src/app/pages/_data/rules/delete/rules-delete.component.html
@@ -11,7 +11,7 @@
       <div class="row pb-3">
         <div class="col-8">
           <label class="label">Nome:*</label>
-          <input type="text" [formControl]="nome" nbInput fullWidth placeholder="Nome" [status]='getStatus(nome)' [disabled]="true">
+          <input type="text" [formControl]="nome" nbInput fullWidth placeholder="Nome" [status]='getStatus(nome)'>
         </div>
 
         <div class="col-4">
