--- a/src/app/pages/_filtro/filtro.component.html
+++ b/src/app/pages/_filtro/filtro.component.html
@@ -40,7 +40,7 @@
             </nb-datepicker>
           </div>
 
-          <div class="offset-xl-9 col-xl-3 offset-md-8 col-md-4 col-12 form-group">
+          <div class="col-12 offset-xl-8 col-xl-4 offset-md-8 col-md-4 sm-offset-3 col-sm-9 form-group">
             <button class="control-button form-control" fullWidth nbButton type="submit" >
               Buscar
             </button>
